--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "node-sass": "^4.13.1",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
+    "react-hook-form": "^5.1.1",
+    "react-redux": "^7.2.0",
+    "react-scripts": "2.1.1",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
