--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-scripts": "2.1.1",
     "redux": "^4.0.5"
   },
-  "http://www.SuperTicTacToe.com/": "https://github.com/ArisApos/SuperTicTacToe",
+  "homepage" : "http://ArisApos.github.io/SuperTicTacToe",
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
