--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "react-dom": "^16.13.0",
     "react-hook-form": "^5.1.1",
     "react-redux": "^7.2.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "2.1.1",
     "redux": "^4.0.5"
   },
-  "homepage" : "http://ArisApos.github.io/SuperTicTacToe",
+  "homepage": "http://ArisApos.github.io/SuperTicTacToe",
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
