--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "2.1.1",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "socket.io-client": "^2.3.0"
   },
   "homepage": "http://ArisApos.github.io/SuperTicTacToe",
   "scripts": {
