--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "2.1.1",
     "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
     "socket.io-client": "^2.3.0"
   },
   "homepage": "http://ArisApos.github.io/SuperTicTacToe",
