--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "redux-saga": "^1.1.3",
     "socket.io-client": "^2.3.0"
   },
-  "homepage": "http://ArisApos.github.io/SuperTicTacToe",
+  "homepage": "http://164.90.222.66",
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
